# docs/openapi.json
@@ -2413,6 +2413,11 @@
             "minimum": 0,
             "maximum": 9007199254740991
           },
+          "retentionDays": {
+            "type": "integer",
+            "minimum": 1,
+            "maximum": 365
+          },
           "notes": {
             "type": "array",
             "items": {
@@ -2455,6 +2460,7 @@
         },
         "required": [
           "version",
+          "retentionDays",
           "notes"
         ],
         "additionalProperties": false
